--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset='UTF-8' />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Three.js Realistic Rain Tutorial by Red Stapler</title>
     <style>
       body {
